k8s-apps/apps/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: atv4-compassuol
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
